--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -10,6 +10,7 @@
         font-size: 120px;
         position: relative;
         top: -100px;
+        opacity: 0.3;
     }
     .mountains{
         background-image: url('/public/mountains4.png');
