--- a/src/app.scss
+++ b/src/app.scss
@@ -28,7 +28,7 @@ section{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    // height: 100vh;
 }
 .box{
     height: 200px;
