--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,32 +1,81 @@
-.navbar{
-    height: 100px;
-    z-index: 99999;
-    .wrapper{
-        max-width: 1100px;
-        margin: 0 auto;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 100%;
-        span{
-            font-weight: bold;
-            cursor: pointer;
-        }
-        // .social{
-        //     display: flex;
-        //     gap: 20px;
-        //     img{
-        //         width: 18px;
-        //         height: 18px;
-        //         opacity: 0.6;
-        //     }
-        // }
-        .navright {
-            width: 150px;
-            p {
-              font-size: 12px;
-            }
-          }
-
+.navbar {
+  height: 100px;
+  z-index: 99999;
+  .wrapper {
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    span {
+      font-weight: bold;
+      cursor: pointer;
     }
+    .navright {
+      width: 130px;
+      text-align: center;
+      p {
+        font-size: 12px;
+        color: rebeccapurple;
+        background: linear-gradient(to right, #9f9f9f 0, #fff 10%, #868686 20%);
+
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: shine 3s infinite linear;
+        animation-fill-mode: forwards;
+        -webkit-text-size-adjust: none;
+        text-decoration: none;
+        font-family: "Poppins", sans-serif;
+      }
+    }
+  }
+}
+
+@-moz-keyframes shine {
+  0% {
+    background-position: 0;
+  }
+  60% {
+    background-position: 180px;
+  }
+  100% {
+    background-position: 180px;
+  }
+}
+
+@-webkit-keyframes shine {
+  0% {
+    background-position: 0;
+  }
+  60% {
+    background-position: 180px;
+  }
+  100% {
+    background-position: 180px;
+  }
+}
+
+@-o-keyframes shine {
+  0% {
+    background-position: 0;
+  }
+  60% {
+    background-position: 180px;
+  }
+  100% {
+    background-position: 180px;
+  }
+}
+
+@keyframes shine {
+  0% {
+    background-position: 0;
+  }
+  60% {
+    background-position: 180px;
+  }
+  100% {
+    background-position: 180px;
+  }
 }
