--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,8 +1,7 @@
 .contact {
+  margin-top: 50px;
   width: 1100px;
   margin: 0 auto;
-  height: 100vh;
-  margin-top: 50px;
   .main-container {
     border-bottom: 1px solid #868686;
     position: relative;
@@ -10,6 +9,7 @@
     justify-content: space-between;
     padding-bottom: 100px;
     margin: 100px 150px 80px 150px;
+    width: 800px;
     .c-heading {
       h1 {
         font-size: 80px;
@@ -64,7 +64,7 @@
       content: "";
       width: 100%;
       height: 100%;
-      background:  rebeccapurple;
+      background: rebeccapurple;
       position: absolute;
       bottom: -100%;
       left: 0;
@@ -114,6 +114,35 @@
       }
       a:first-child {
         color: rebeccapurple;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .contact {
+    .end-info {
+      padding: 100px 100px 50px 100px;
+    }
+  }
+}
+
+
+@media screen and (max-width: 1100px) {
+  .contact {
+    width: 800px;
+    .main-container {
+      margin: 0;
+      .c-heading {
+        h1 {
+          font-size: 65px;
+          width: 570px;
+          font-weight: 200;
+          line-height: 65px;
+          img{
+            width: 80px;
+          }
+        }
       }
     }
   }
