--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,5 +1,6 @@
 .hero {
-  height: calc(100vh - 100px);
+  //height: calc(100vh - 100px);
+  height: 100vh;
   overflow: hidden;
   position: relative;
   .wrapper {
@@ -7,23 +8,27 @@
     height: 100%;
     margin: auto;
     position: relative;
+    padding: 80px 0;
+    transition: all 0.5s ease;
     .textContainer {
       height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
       gap: 20px;
+      transition: all 0.5s ease;
       h2 {
         font-size: 30px;
         color: rebeccapurple;
         letter-spacing: 10px;
+        transition: all 0.5s ease;
       }
       h1 {
         font-size: 120px;
         line-height: 120px;
+        transition: all 0.5s ease;
       }
       .buttons {
-        
         button {
           padding: 20px 20px;
           border: none;
@@ -54,6 +59,7 @@
         position: absolute;
         right: 0;
         bottom: 50px;
+        transition: all 0.5s ease;
       }
     }
   }
@@ -64,11 +70,13 @@
     right: 100px;
     align-items: center;
     justify-content: center;
+    transition: all 0.5s ease;
     img {
       width: 600px;
       opacity: 0.7;
       position: relative;
       top: -100px;
+      transition: all 0.5s ease;
     }
   }
   .slidingTextContact {
@@ -81,4 +89,34 @@
     font-weight: bold;
     opacity: 0.7;
   }
+}
+
+@media screen and (max-width: 1280px) {
+  .hero{
+    .wrapper {
+      .textContainer{
+        padding: 0 100px;
+        h2{
+          font-size: 20px;
+        }
+        h1{
+          font-size: 100px;
+        }
+        img{
+          right: 100px;
+        }
+      }
+  }
+  .imgContainer {
+    img {
+      width: 400px;
+      top: 0;
+    }
+  }
+  .slidingTextContact{
+  font-size: 30vh;
+  bottom: -30px;
+}
+}
+
 }
