--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,6 +1,6 @@
 .hero {
   //height: calc(100vh - 100px);
-  height: 100vh;
+  //height: 100vh;
   overflow: hidden;
   position: relative;
   .wrapper {
