--- a/src/components/serviceHeading/serviceHeading.scss
+++ b/src/components/serviceHeading/serviceHeading.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 80px 0;
+    padding: 80px 0 0 0;
     .service-heading{
         transition: all ease 0.8s;
         h1{
